<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_image_for_result_activity"
    tools:context=".resultActivity"
    tools:ignore="MissingClass">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_marginTop="35dp"
        android:textSize="30sp"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hay_congratulation"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Rupam"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:text="You gussed in 8 attempts."-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="20sp"-->
<!--        android:id="@+id/txtScore"-->
<!--        android:layout_marginTop="20dp"/>-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/play_again"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/btnPlayAgain"
        android:backgroundTint="#C0CA33"
        android:textSize="20sp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:lottie_rawRes="@raw/joy"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>


</LinearLayout>